--- a/about.html
+++ b/about.html
@@ -78,18 +78,42 @@
     <section>
       <h2 class="text-xl font-bold text-green-800 mb-4">📸 A Glimpse of Our Produce</h2>
       <div class="grid grid-cols-2 sm:grid-cols-3 gap-4">
-        <a href="images/1.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/1.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
-        <a href="images/3.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/3.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
-        <a href="images/4.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/4.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
-        <a href="images/5.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/5.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
-        <a href="images/6.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/6.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
-        <a href="images/10.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/10.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
-        <a href="images/11.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/11.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
-        <a href="images/Chikoo.jpeg" data-lightbox="farm-gallery" data-title="Sapodilla tree"><img src="images/Chikoo.jpeg" alt="Sapodilla tree" class="rounded shadow"></a>
-        <a href="images/MangoTypes.jpeg" data-lightbox="farm-gallery" data-title="3 Varieties of Mangoes: കോട്ടൂക്കോണം, കപ്പ , പഞ്ജര "><img src="images/MangoTypes.jpeg" alt="3 Varieties of Mangoes: കോട്ടൂക്കോണം, കപ്പ , പഞ്ജര " class="rounded shadow"></a>
-        <a href="images/MangoHarvest.jpg" data-lightbox="farm-gallery" data-title="Last year's Mango Harvest"><img src="images/MangoHarvest.jpg" alt="Last year's Mango Harvest" class="rounded shadow"></a>
-        <a href="images/NaturalRipeningProcess.jpg" data-lightbox="farm-gallery" data-title="Mangoes being ripened naturally"><img src="images/NaturalRipeningProcess.jpg" alt="Mangoes being ripened naturally" class="rounded shadow"></a>
-        <a href="images/MangoSlices.jpg" data-lightbox="farm-gallery" data-title="Sliced Mangoes on table"><img src="images/MangoSlices.jpg" alt="Sliced Mangoes on table" class="rounded shadow"></a>
+        <a href="images/1.jpeg" data-lightbox="farm-gallery" data-title="Freshly harvested oyster mushrooms">
+          <img src="images/1.jpeg" alt="Oyster mushrooms" class="rounded shadow">
+        </a>
+        <a href="images/3.jpeg" data-lightbox="farm-gallery" data-title="Mango tree in full bloom">
+          <img src="images/3.jpeg" alt="Mango tree" class="rounded shadow">
+        </a>
+        <a href="images/4.jpeg" data-lightbox="farm-gallery" data-title="Naturally ripened mangoes">
+          <img src="images/4.jpeg" alt="Naturally ripened mangoes" class="rounded shadow">
+        </a>
+        <a href="images/5.jpeg" data-lightbox="farm-gallery" data-title="Sliced mangoes on kitchen table">
+          <img src="images/5.jpeg" alt="Sliced mangoes" class="rounded shadow">
+        </a>
+        <a href="images/6.jpeg" data-lightbox="farm-gallery" data-title="Papaya or sapota tree">
+          <img src="images/6.jpeg" alt="Fruit tree" class="rounded shadow">
+        </a>
+        <a href="images/10.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms close-up">
+          <img src="images/10.jpeg" alt="Oyster mushrooms close-up" class="rounded shadow">
+        </a>
+        <a href="images/11.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms sprouting">
+          <img src="images/11.jpeg" alt="Sprouting mushrooms" class="rounded shadow">
+        </a>
+        <a href="images/Chikoo.jpeg" data-lightbox="farm-gallery" data-title="Sapodilla (Chikoo) tree from our garden">
+          <img src="images/Chikoo.jpeg" alt="Sapodilla tree" class="rounded shadow">
+        </a>
+        <a href="images/MangoTypes.jpeg" data-lightbox="farm-gallery" data-title="3 Varieties of Mangoes: കോട്ടൂക്കോണം, കപ്പ, പഞ്ജര">
+          <img src="images/MangoTypes.jpeg" alt="Three mango varieties" class="rounded shadow">
+        </a>
+        <a href="images/MangoHarvest.jpg" data-lightbox="farm-gallery" data-title="Last year's mango harvest">
+          <img src="images/MangoHarvest.jpg" alt="Mango harvest" class="rounded shadow">
+        </a>
+        <a href="images/NaturalRipeningProcess.jpg" data-lightbox="farm-gallery" data-title="Mangoes undergoing natural ripening">
+          <img src="images/NaturalRipeningProcess.jpg" alt="Natural ripening mangoes" class="rounded shadow">
+        </a>
+        <a href="images/MangoSlices.jpg" data-lightbox="farm-gallery" data-title="Juicy sliced mangoes served on table">
+          <img src="images/MangoSlices.jpg" alt="Mango slices" class="rounded shadow">
+        </a>
       </div>
     </section>
   </main>
