--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
     <!-- Image Slideshow Gallery -->
     <section x-data="{ slide: 0, images: [
       { src: 'images/1.jpeg', caption: 'Freshly harvested oyster mushrooms' },
-      { src: 'images/3.jpeg', caption: 'Our flourishing mango tree' },
-      { src: 'images/4.jpeg', caption: 'Naturally ripened mangoes, chemical-free' },
-      { src: 'images/5.jpeg', caption: 'Ripe mangoes ready to serve' },
-      { src: 'images/6.jpeg', caption: 'A glimpse of our papaya or sapota tree' },
-      { src: 'images/2.jpeg', caption: 'Our hi-tech indoor mushroom grow room' }
+      { src: 'images/3.jpeg', caption: 'Freshly harvested oyster mushrooms' },
+      { src: 'images/4.jpeg', caption: 'Freshly harvested oyster mushrooms' },
+      { src: 'images/5.jpeg', caption: 'Freshly harvested oyster mushrooms' },
+      { src: 'images/6.jpeg', caption: 'Freshly harvested oyster mushrooms' },
+      { src: 'images/2.jpeg', caption: 'Freshly harvested oyster mushrooms' }
     ] }">
       <h2 class="text-2xl font-semibold text-green-700">📷 A Peek into Our Farm</h2>
       <p class="text-lg mb-4">Here are some moments captured from our little farm — from fresh mushrooms to fruit trees and the vibrant seasonal produce grown with love.</p>
