--- a/about.html
+++ b/about.html
@@ -79,12 +79,13 @@
       <h2 class="text-xl font-bold text-green-800 mb-4">📸 A Glimpse of Our Produce</h2>
       <div class="grid grid-cols-2 sm:grid-cols-3 gap-4">
         <a href="images/1.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/1.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
-        <a href="images/3.jpeg" data-lightbox="farm-gallery" data-title="Mango tree"><img src="images/3.jpeg" alt="Mango tree" class="rounded shadow"></a>
-        <a href="images/4.jpeg" data-lightbox="farm-gallery" data-title="Naturally ripened mangoes"><img src="images/4.jpeg" alt="Naturally ripened mangoes" class="rounded shadow"></a>
-        <a href="images/5.jpeg" data-lightbox="farm-gallery" data-title="Sliced mangoes"><img src="images/5.jpeg" alt="Sliced mangoes" class="rounded shadow"></a>
-        <a href="images/6.jpeg" data-lightbox="farm-gallery" data-title="Sapodilla tree"><img src="images/6.jpeg" alt="Sapodilla tree" class="rounded shadow"></a>
+        <a href="images/2.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/2.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
+        <a href="images/3.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/3.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
+        <a href="images/4.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/4.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
+        <a href="images/5.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/5.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
+        <a href="images/6.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/6.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
         <a href="images/10.jpeg" data-lightbox="farm-gallery" data-title="Harvest ready mushrooms"><img src="images/10.jpeg" alt="Harvest ready mushrooms" class="rounded shadow"></a>
-        <a href="images/11.jpeg" data-lightbox="farm-gallery" data-title="Farm setup"><img src="images/11.jpeg" alt="Farm setup" class="rounded shadow"></a>
+        <a href="images/11.jpeg" data-lightbox="farm-gallery" data-title="Oyster mushrooms"><img src="images/11.jpeg" alt="Oyster mushrooms" class="rounded shadow"></a>
         <a href="images/Chikoo.jpeg" data-lightbox="farm-gallery" data-title="Sapodilla tree"><img src="images/Chikoo.jpeg" alt="Sapodilla tree" class="rounded shadow"></a>
         <a href="images/MangoTypes.jpeg" data-lightbox="farm-gallery" data-title="3 Varieties of Mangoes: കോട്ടൂക്കോണം, കപ്പ , പഞ്ജര"><img src="images/MangoTypes.jpeg" alt="Mango varieties" class="rounded shadow"></a>
         <a href="images/MangoHarvest.jpg" data-lightbox="farm-gallery" data-title="Last year's Mango Harvest"><img src="images/MangoHarvest.jpg" alt="Mango harvest" class="rounded shadow"></a>
