--- a/about.html
+++ b/about.html
@@ -103,10 +103,13 @@
   <!-- Lightbox2 JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
   <script>
-    lightbox.option({
-      'resizeDuration': 200,
-      'wrapAround': true
-    })
+    document.addEventListener("DOMContentLoaded", function () {
+      lightbox.option({
+        'resizeDuration': 200,
+        'wrapAround': true,
+        'alwaysShowNavOnTouchDevices': true
+      });
+    });
   </script>
 </body>
 </html>
