--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     <section class="bg-yellow-50 p-6 rounded-lg border border-yellow-200">
       <h2 class="text-xl font-bold text-yellow-700 mb-2">🌟 Seasonal Availability</h2>
       <p><strong>Currently Available:</strong> Oyster mushrooms</p>
-      <p><strong>Coming Soon:</strong> Mangoes, Papayas, Tomatoes, Jackfruit, and more!</p>
+      <p><strong>Coming Soon:</strong> Mangoes, Papayas, Jackfruit, Chikoo, Tomatoes, Custard Apple,Moringa, Ladysfinger and more!</p>
     </section>
 
     <!-- Customer Quote -->
     <section class="text-center">
-      <blockquote class="italic text-gray-700 max-w-2xl mx-auto">“We love knowing our kids are eating food that’s completely safe — and delicious!”</blockquote>
-      <p class="mt-2 text-sm text-gray-500">— A Happy Neighbor</p>
+      <blockquote class="italic text-gray-700 max-w-2xl mx-auto">“Much better quality compared to the ones we buy from Instamart. My kid just loved it, Thanks !”</blockquote>
+      <p class="mt-2 text-sm text-gray-500">— A Happy Customer</p>
     </section>
 
     <!-- Image Slideshow Gallery -->
