--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p class="text-xl mt-4 text-green-700 max-w-xl mx-auto">From our garden to your table — safe, homegrown food for your family.</p>
     <div class="mt-6 flex justify-center gap-4">
       <a href="about.html" class="bg-green-600 text-white px-5 py-2 rounded-full shadow hover:bg-green-700">See Our Story</a>
-      <a href="#contact" class="bg-white text-green-700 border border-green-600 px-5 py-2 rounded-full hover:bg-green-100">Order Now</a>
+      <a href="https://wa.me/919876543210?text=Hi%2C%20I'm%20interested%20in%20ordering%20from%20Tayyib%20Crops!" target="_blank" rel="noopener noreferrer" class="bg-white text-green-700 border border-green-600 px-5 py-2 rounded-full hover:bg-green-100">Order Now</a>
     </div>
   </header>
 
@@ -39,7 +39,7 @@
         </div>
         <div class="bg-green-50 p-4 rounded-lg shadow">
           <div class="text-4xl">🚚</div>
-          <p class="font-semibold mt-2">Local Delivery (Coming Soon)</p>
+          <p class="mt-2 text-gray-500">Local Delivery available within 4km radius for free. For farther locations, delivery can be arranged via Porter on a mutually agreed basis.</p>
         </div>
         <div class="bg-green-50 p-4 rounded-lg shadow">
           <div class="text-4xl">🏡</div>
@@ -52,7 +52,7 @@
     <section class="bg-yellow-50 p-6 rounded-lg border border-yellow-200">
       <h2 class="text-xl font-bold text-yellow-700 mb-2">🌟 Seasonal Availability</h2>
       <p><strong>Currently Available:</strong> Oyster mushrooms</p>
-      <p><strong>Coming Soon:</strong> Mangoes, Papayas, Jackfruit, Chikoo, Tomatoes, Custard Apple,Moringa, Ladysfinger and more!</p>
+      <p><strong>Coming Soon:</strong> Mangoes, Papayas, Jackfruit, Chikoo, Tomatoes, Custard Apple, Moringa, Ladysfinger and more!</p>
     </section>
 
     <!-- Customer Quote -->
