--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p class="text-xl mt-4 text-green-700 max-w-xl mx-auto">From our garden to your table — safe, homegrown food for your family.</p>
     <div class="mt-6 flex justify-center gap-4">
       <a href="about.html" class="bg-green-600 text-white px-5 py-2 rounded-full shadow hover:bg-green-700">See Our Story</a>
-      <a href="https://wa.me/919876543210?text=Hi%2C%20I'm%20interested%20in%20ordering%20from%20Tayyib%20Crops!" target="_blank" rel="noopener noreferrer" class="bg-white text-green-700 border border-green-600 px-5 py-2 rounded-full hover:bg-green-100">Order Now</a>
+      <a href="https://wa.me/917306050329?text=Hi%2C%20I'm%20interested%20in%20ordering%20from%20Tayyib%20Crops!" target="_blank" rel="noopener noreferrer" class="bg-white text-green-700 border border-green-600 px-5 py-2 rounded-full hover:bg-green-100">Order Now</a>
     </div>
   </header>
 
@@ -39,7 +39,11 @@
         </div>
         <div class="bg-green-50 p-4 rounded-lg shadow">
           <div class="text-4xl">🚚</div>
-          <p class="mt-2 text-gray-500">Local Delivery available within 4km radius for free. For farther locations, delivery can be arranged via Porter on a mutually agreed basis.</p>
+          <p class="font-semibold mt-2">Local Delivery</p>
+          <p class="mt-1 text-gray-600 text-sm">
+            Free delivery within a 4km radius. For locations beyond that, delivery can be arranged via Porter on a mutually agreed basis. <br />
+            <strong>Conditions apply.</strong> Please contact us via WhatsApp at <a href="https://wa.me/917306050329" target="_blank" rel="noopener noreferrer" class="text-green-700 underline">73060 50329</a> to discuss your order and delivery options.
+          </p>
         </div>
         <div class="bg-green-50 p-4 rounded-lg shadow">
           <div class="text-4xl">🏡</div>
