--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     body::before {
       content: "";
-      background: url('images/logo.png') no-repeat center center;
+      background: url('images/LogoPNG.png') no-repeat center center;
       background-size: 300px;
       opacity: 0.03;
       position: fixed;
