--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     body::before {
       content: "";
       background: url('images/LogoPNG.png') no-repeat center center;
-      background-size: 300px;
-      opacity: 0.03;
+      background-size: 500px;
+      opacity: 0.05;
       position: fixed;
       top: 0;
       left: 0;
       width: 100vw;
       height: 100vh;
       z-index: -1;
+      pointer-events: none;
     }
   </style>
 </head>
