--- a/about.html
+++ b/about.html
@@ -10,6 +10,25 @@
 
   <!-- Lightbox2 CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
+  <style>
+    body::before {
+      content: "";
+      background: url('images/logo.png') no-repeat center center;
+      background-size: 700px;
+      opacity: 0.04;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      pointer-events: none;
+    }
+    body > * {
+      position: relative;
+      z-index: 1;
+    }
+  </style>
 </head>
 
 <body class="bg-white text-gray-800 font-sans">
