--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <style>
     body::before {
       content: "";
-      background: url('images/logo.png') no-repeat center center;
+      background: url('images/LogoPNG.png') no-repeat center center;
       background-size: 700px;
       opacity: 0.04;
       position: fixed;
