--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
         <a href="images/MangoHarvest.jpg" data-lightbox="farm-gallery" data-title="Last year's Mango Harvest"><img src="images/MangoHarvest.jpg" alt="Mango harvest" class="rounded shadow"></a>
         <a href="images/NaturalRipeningProcess.jpg" data-lightbox="farm-gallery" data-title="Mangoes being ripened naturally"><img src="images/NaturalRipeningProcess.jpg" alt="Ripening mangoes" class="rounded shadow"></a>
         <a href="images/MangoSlices.jpg" data-lightbox="farm-gallery" data-title="Sliced Mangoes on table"><img src="images/MangoSlices.jpg" alt="Sliced mangoes" class="rounded shadow"></a>
-        
+         <a href="images/Slices.jpeg" data-lightbox="farm-gallery" data-title="Sliced Mangoes on table"><img src="images/Slices.jpeg" alt="Sliced mangoes" class="rounded shadow"></a>
         <a href="images/CustardApple.jpeg" data-lightbox="farm-gallery" data-title="The Custard Apple tree : ആത്തച്ചക്ക, സീതപ്പഴം"><img src="images/CustardApple.jpeg" alt="The Custard Apple tree : ആത്തച്ചക്ക, സീതപ്പഴം" class="rounded shadow"></a>
         <a href="images/MangoTree-3.jpeg" data-lightbox="farm-gallery" data-title="The Third Mango tree"><img src="images/MangoTree-3.jpeg" alt="The Third Mango tree" class="rounded shadow"></a>
         <a href="images/VietnamJackfruit.jpeg" data-lightbox="farm-gallery" data-title="The Vietnam Jackfruit tree"><img src="images/VietnamJackfruit.jpeg" alt="The Vietnam Jackfruit tree" class="rounded shadow"></a>
