--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       { src: 'images/2.jpeg', caption: 'Freshly harvested oyster mushrooms' }
     ] }">
       <h2 class="text-2xl font-semibold text-green-700 text-center">📷 A Peek into Our Farm</h2>
-      <p class="text-lg mb-4 text-center">Here are some moments captured from our little farm — from fresh mushrooms to fruit trees and the vibrant seasonal produce grown with love.</p>
+      <p class="text-lg mb-4 text-center">Captured moments from our mini farm — from tiny mushroom pinheads just emerging, to plump clusters nearly ready for harvest.</p>
 
       <div class="relative">
         <template x-for="(img, index) in images" :key="index">
