--- a/about.html
+++ b/about.html
@@ -31,6 +31,18 @@
   </style>
 </head>
 
+<!-- Google Analytics code-->
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WFVVTZVZ8Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WFVVTZVZ8Q');
+</script>
+ <!-- Google Analytics code-->
+  
 <body class="bg-white text-gray-800 font-sans">
 
   <!-- Navigation -->
