--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,19 @@
   <title>Contact | Tayyib Crops</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
+
+  <!-- Google Analytics code-->
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WFVVTZVZ8Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WFVVTZVZ8Q');
+</script>
+ <!-- Google Analytics code-->
+  
 <body class="bg-white text-gray-800 font-sans">
   <nav class="bg-green-100 p-4 shadow-md flex justify-center space-x-6 text-green-700">
     <a href="index.html" class="hover:underline">Home</a>
