--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
     }
   </style>
 </head>
+
+  <!-- Google Analytics code-->
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WFVVTZVZ8Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WFVVTZVZ8Q');
+</script>
+ <!-- Google Analytics code-->
+  
 <body class="bg-white text-gray-800 font-sans">
   <nav class="bg-green-100 p-4 shadow-md flex justify-center space-x-6 text-green-700">
     <a href="index.html" class="hover:underline font-semibold">Home</a>
